--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^17.0.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
+    "react-scroll-into-view": "^1.9.4",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "semver": "7.3.2",
