--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-bootstrap": "^2.0.0-beta.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-parallax": "^3.3.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "react-scroll-into-view": "^1.9.4",
